# todo-app

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_create_todos_table.py
backend/app/: config.py  database.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: health.py  todos.py
backend/app/exceptions/: todo_exceptions.py
backend/app/models/: __init__.py  todo.py
backend/app/repositories/: todo_repository.py
backend/app/schemas/: __init__.py  envelope.py  todo.py
backend/app/services/: todo_service.py
backend/tests/: conftest.py  test_config.py  test_health.py  test_todo_exceptions.py  test_todo_repository.py  test_todo_schemas.py  test_todos_api.py
docs/: ARCHITECTURE.md
frontend/: .eslintrc.cjs  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src/api/: index.ts  todoApi.test.ts  todoApi.ts
frontend/src/components/common/: LoadingSpinner.tsx
frontend/src/components/layout/: AppShell.tsx  Header.tsx
frontend/src/components/todos/: TodoFilters.test.tsx  TodoFilters.tsx  TodoForm.test.tsx  TodoForm.tsx  TodoItem.test.tsx  TodoItem.tsx  TodoList.test.tsx  TodoList.tsx
frontend/src/components/ui/: Button.test.tsx  Button.tsx  Input.test.tsx  Input.tsx  Modal.test.tsx  (+4 more)
frontend/src/hooks/: useTodos.test.ts  useTodos.ts
frontend/src/store/: todoStore.test.ts  todoStore.ts
frontend/src/types/: todo.ts
